# eda-seoulpay

./: eda_seoulpay_payment.ipynb  main.py  pyproject.toml
data/: cda_sample_data.csv
